# budshome-frontend

./: .editorconfig  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
examples/: env.rs
public/: index.html  manifest.json
src/: App.js  App.tsx  index.js  index.tsx  main.rs  serviceWorker.ts
src/components/: Topbar.js  home.test.tsx  home.tsx  navigation.tsx
src/home/: App.js  Banner.js  Banner.jsx  Footer.js  Footer.jsx  Header.js  Header.jsx  Home.js  Page1.js  Page2.js  Page2.jsx  Page3.js  index.jsx
static/templates/: index.html
