[package]
name = "budshome-cms"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
actix-http = "2"
actix-web = "3"

dotenv = "=0.15.0"
env_logger = "=0.7.1"
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
serde_json = "=1.0.58"

handlebars = { version = "=3.5.0", features = ["dir_source"] }
juniper = "=0.14.2"
diesel = { version = "=1.4.5", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "=0.8.9"
chrono = "=0.4.19"
jsonwebtoken = "=7.2.0"
